<resources>
    <string name="app_name">Quản lý cửa hàng</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="content_main">Mục chính</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="authentication">Xác thực tài khoản</string>
    <string name="close">Đóng</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="splash_text">Cam kết chất lượng sản phẩm &amp; dịch vụ tuyệt vời</string>
    // Navigation
    <string name="nav_home">Trang chủ</string>
    <string name="nav_favorite">Yêu thích</string>
    <string name="nav_cart">Giỏ hàng</string>
    <string name="nav_history">Lịch sử</string>
    <string name="nav_order">Đơn hàng</string>
    <string name="nav_manage">Quản lý</string>
    <string name="nav_statistical">Thống kê</string>
    <string name="nav_user">Tôi</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_my_profile">Hồ sơ</string>
    <string name="nav_change_password">Đổi mật khẩu</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="dot_loading">...</string>
    <string name="favorite">Favorite</string>
    <string name="contact">Liên hệ</string>
    <string name="information">Thông tin</string>
    <string name="message">Nhắn tin</string>
    <string name="meeting">Cuộc họp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    // action
    <string name="action_ok">Đồng ý</string>
    <string name="action_cancel">Hủy bỏ</string>
    // dialog
    <string name="waiting_message">Vui lòng đợi…</string>
    // msg
    <string name="error_not_connect_to_internet">Vui lòng kiểm tra kết nối mạng của bạn</string>
    <string name="msg_exit_app">Bạn có muốn thoát ứng dụng?</string>

    <string name="category_title">Danh mục</string>
    <string name="food_suggest">Gợi ý món ăn</string>
    <string name="product_suggest">Gợi ý sản phẩm</string>
    <string name="product_new">Sản phẩm mới</string>
    <string name="food_detail_title">Chi tiết món ăn</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="added_to_cart">Đã thêm vào giỏ hàng</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="send_feedback_success">Gửi phản hồi thành công!</string>
    <string name="name_require">Vui lòng nhập Họ và Tên</string>
    <string name="comment_require">Vui lòng nhập phản hồi của bạn</string>
    <string name="order_cart">Đặt Hàng</string>
    <string name="total">Tổng Tiền:</string>
    <string name="delete">Xóa</string>
    <string name="confirm_delete_food">Xác nhận xóa khỏi giỏ hàng</string>
    <string name="message_delete_food">Bạn có chắc chắn muốn xóa món ăn này không?</string>
    <string name="dialog_cancel">Hủy</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="address_delivery">Địa chỉ giao hàng</string>
    <string name="message_enter_infor_order">Vui lòng điền đầy đủ thông tin giao hàng</string>
    <string name="hint_search_name">Tên món ăn…</string>
    <string name="price_label">Giá:</string>
    <string name="description_label">Mô tả</string>
    <string name="more_image_label">Một số hình ảnh khác</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="payment_method_cash">Tiền mặt</string>

    <string name="feedback_name">Họ và Tên (*)</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_phone">Số điện thoại</string>
    <string name="feedback_comment">Bình luận (*)</string>
    <string name="send_feedback">Gửi phản hồi</string>

    <string name="label_id">Mã đơn hàng:</string>
    <string name="label_name">Họ tên:</string>
    <string name="label_phone">Số điện thoại:</string>
    <string name="label_address">Địa chỉ nhận:</string>
    <string name="label_price">Tổng tiền:</string>
    <string name="label_date">Ngày đặt hàng:</string>
    <string name="label_payment">Thanh toán:</string>
    <string name="label_menu">Thực đơn:</string>

    <string name="youtube">YOUTUBE</string>
    <string name="source">SOURCE</string>

    <string name="status_new">Chờ xử lý</string>
    <string name="status_cancel">Hủy đơn hàng</string>
    <string name="status_process">Đang giao hàng</string>
    <string name="status_success">Thành công</string>
    <string name="status_fail">Thất bại</string>
    <string name="quantity">Số lượng:</string>
    <string name="list_food_order">Danh sách món ăn trong đơn hàng</string>

    <string name="label_facebook">Facebook</string>
    <string name="label_call">Call Phone</string>
    <string name="label_gmail">Gmail</string>
    <string name="label_skype">Skype</string>
    <string name="label_youtube">Youtube</string>
    <string name="label_zalo">Zalo</string>

    <string name="msg_get_date_error">Lỗi đã xảy ra, vui lòng thử lại sau</string>
    <string name="msg_order_success">Đặt hàng thành công, vui lòng check đơn hàng trong phần Lịch sử</string>
    <string name="title_activity_dang_nhap">DangNhapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_list">Danh sách đơn hàng</string>
    <string name="statistical_product">Thống kê mặt hàng</string>
    <string name="statistical_revenue_month">Thống kê doanh thu</string>

</resources>