<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.LoginEmailTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email"
                android:drawableTint="@color/lavender"
                android:drawablePadding="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/edittext_bkg"
                tools:targetApi="m" />

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/pass"
                    android:padding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_baseline_lock"
                    android:drawableTint="@color/lavender"
                    android:drawablePadding="8dp"
                    android:background="@drawable/edittext_bkg"
                    tools:targetApi="m" />

                <ImageView
                    android:id="@+id/show_hide_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/define_dimen_5"
                    android:padding="@dimen/define_dimen_5"
                    android:visibility="gone"
                    android:src="@drawable/ic_show_password" />
            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:id="@+id/btndangnhap"
                android:textSize="18sp"
                android:text="@string/login"
                app:cornerRadius="30dp" />

            <LinearLayout
                android:id="@+id/line3"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Nếu chưa có tài khoản?"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtdangky_dn"
                    android:layout_marginStart="5dp"
                    android:text="@string/register"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_marginTop="15dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colortext"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/txtresetpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>